; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pcmcia/extr_rsrc_nonstatic.c_claim_region.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pcmcia/extr_rsrc_nonstatic.c_claim_region.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }
%struct.pcmcia_socket = type { i64 }

@IORESOURCE_MEM = common dso_local global i32 0, align 4
@iomem_resource = common dso_local global %struct.resource zeroinitializer, align 4
@ioport_resource = common dso_local global %struct.resource zeroinitializer, align 4
@IORESOURCE_BUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.resource* (%struct.pcmcia_socket*, i32, i32, i32, i8*)* @claim_region to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.resource* @claim_region(%struct.pcmcia_socket* %0, i32 %1, i32 %2, i32 %3, i8* %4) #0 {
  %6 = alloca %struct.pcmcia_socket*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca %struct.resource*, align 8
  %12 = alloca %struct.resource*, align 8
  store %struct.pcmcia_socket* %0, %struct.pcmcia_socket** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %13 = load i32, i32* %9, align 4
  %14 = load i32, i32* @IORESOURCE_MEM, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  %17 = zext i1 %16 to i64
  %18 = select i1 %16, %struct.resource* @iomem_resource, %struct.resource* @ioport_resource
  store %struct.resource* %18, %struct.resource** %12, align 8
  %19 = load i32, i32* %7, align 4
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* %9, align 4
  %22 = load i32, i32* @IORESOURCE_BUSY, align 4
  %23 = or i32 %21, %22
  %24 = load i8*, i8** %10, align 8
  %25 = call %struct.resource* @make_resource(i32 %19, i32 %20, i32 %23, i8* %24)
  store %struct.resource* %25, %struct.resource** %11, align 8
  %26 = load %struct.resource*, %struct.resource** %11, align 8
  %27 = icmp ne %struct.resource* %26, null
  br i1 %27, label %28, label %40

28:                                               ; preds = %5
  %29 = load %struct.resource*, %struct.resource** %12, align 8
  %30 = icmp ne %struct.resource* %29, null
  br i1 %30, label %31, label %36

31:                                               ; preds = %28
  %32 = load %struct.resource*, %struct.resource** %12, align 8
  %33 = load %struct.resource*, %struct.resource** %11, align 8
  %34 = call i64 @request_resource(%struct.resource* %32, %struct.resource* %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %39

36:                                               ; preds = %31, %28
  %37 = load %struct.resource*, %struct.resource** %11, align 8
  %38 = call i32 @kfree(%struct.resource* %37)
  store %struct.resource* null, %struct.resource** %11, align 8
  br label %39

39:                                               ; preds = %36, %31
  br label %40

40:                                               ; preds = %39, %5
  %41 = load %struct.resource*, %struct.resource** %11, align 8
  ret %struct.resource* %41
}

declare dso_local %struct.resource* @make_resource(i32, i32, i32, i8*) #1

declare dso_local i64 @request_resource(%struct.resource*, %struct.resource*) #1

declare dso_local i32 @kfree(%struct.resource*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
